Fixed an issue with directories not collapsing in the file hierarchy.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -464,11 +464,11 @@ input {
   }
 
   .comment-delete {
-    color: red;
+    /*color: red;*/
     cursor: pointer;
 
     :hover {
-      color: darkred;
+      color: red;
     }
 
     :active {
@@ -476,6 +476,10 @@ input {
     }
   }
 
+
+  .gutter {
+    @include no_select;
+  }
 
 }
 
@@ -502,9 +506,10 @@ input {
     display: block;
     padding: 20px;
     overflow-x: auto;
-    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+    overflow-y: auto;
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
+    white-space: nowrap;
   }
 
   .sidebar-collapse {
